# poetry-demo

./: CHANGELOG.md  pyproject.toml
.github/workflows/: cicd.yml  release.yml
poetry_demo/: core.py
src/non_tech/: core.py
src/tech/: core.py
tests/: test_poetry_demo.py
