[tool.poetry]
name = "poetry-demo"
version = "0.6.0"
description = ""
authors = ["Wai Kiat Tan <wk.tan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-semantic-release = "7.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["poetry_demo/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
