[tool.poetry]
name = "poetry-demo"
version = "0.8.0"
description = ""
authors = ["Wai Kiat Tan <wk.tan@outlook.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-semantic-release = "7.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["pyproject.toml:tool.poetry.version"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
